[package]
name = "moonbeam-service"
authors = [ "PureStake" ]
edition = "2021"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
version = "0.28.0"

[package.metadata.cargo-machete]
ignored = [
	# https://github.com/bnjbvr/cargo-machete/issues/58
	# cargo-machete currently don't detect dependencies used only in features
	"polkadot_cli",
]

[dependencies]
async-io = "1.3"
bip32 = { git = "https://github.com/purestake/crates", branch = "bip32-v0.4.0-fix", default-features = false, features = [ "bip39" ] }
flume = "0.10.9"
futures = { version = "0.3.1", features = [ "compat" ] }
hex-literal = "0.3.4"
jsonrpsee = { version = "0.15.0", default-features = false, features = [ "macros", "server" ] }
libsecp256k1 = { version = "0.7", features = [ "hmac" ] }
log = "0.4"
maplit = "1.0.2"
serde = { version = "1.0.101", features = [ "derive" ] }
serde_json = "1.0"
sha3 = { version = "0.10", default-features = false }
tiny-bip39 = { version = "0.8", default-features = false }
tokio = { version = "1.13.0", features = [ "macros", "sync" ] }

# Moonbeam
cli-opt = { package = "moonbeam-cli-opt", path = "../cli-opt" }
manual-xcm-rpc = { path = "../../client/rpc/manual-xcm" }
moonbeam-core-primitives = { path = "../../core-primitives" }
moonbeam-finality-rpc = { path = "../../client/rpc/finality" }
moonbeam-primitives-ext = { path = "../../primitives/ext" }
moonbeam-rpc-debug = { path = "../../client/rpc/debug" }
moonbeam-rpc-primitives-debug = { path = "../../primitives/rpc/debug" }
moonbeam-rpc-primitives-txpool = { path = "../../primitives/rpc/txpool" }
moonbeam-rpc-trace = { path = "../../client/rpc/trace" }
moonbeam-rpc-txpool = { path = "../../client/rpc/txpool" }
moonbeam-vrf = { path = "../../client/vrf" }
pallet-parachain-staking = { path = "../../pallets/parachain-staking" }
session-keys-primitives = { path = "../../primitives/session-keys" }

# Moonbeam runtimes
moonbase-runtime = { path = "../../runtime/moonbase", optional = true }
moonbeam-runtime = { path = "../../runtime/moonbeam", optional = true }
moonriver-runtime = { path = "../../runtime/moonriver", optional = true }

# Substrate
pallet-transaction-payment-rpc = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32" }
sc-basic-authorship = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32" }
sc-chain-spec = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32" }
sc-client-api = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32" }
sc-consensus = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32" }
sc-consensus-manual-seal = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32" }
sc-executor = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32", features = [ "wasmtime" ] }
sc-network = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32" }
sc-network-common = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32" }
sc-rpc = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32" }
sc-rpc-api = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32" }
sc-service = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32" }
sc-sysinfo = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32" }
sc-telemetry = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32" }
sc-tracing = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32" }
sc-transaction-pool = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32" }
sc-transaction-pool-api = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32" }
sp-api = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32" }
sp-block-builder = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32" }
sp-blockchain = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32" }
sp-consensus = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32" }
sp-core = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32" }
sp-io = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32" }
sp-keystore = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32" }
sp-offchain = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32" }
sp-runtime = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32" }
sp-session = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32" }
sp-storage = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32" }
sp-timestamp = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32" }
sp-transaction-pool = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32" }
sp-trie = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32" }
substrate-frame-rpc-system = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32" }
substrate-prometheus-endpoint = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32" }

# Frontier
fc-consensus = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.32" }
fc-db = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.32" }
fc-mapping-sync = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.32" }
fc-rpc = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.32", features = [ "rpc_binary_search_estimate" ] }
fc-rpc-core = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.32" }
fp-rpc = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.32" }
fp-storage = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.32" }
pallet-ethereum = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.32", features = [ "forbid-evm-reentrancy" ] }

# Cumulus / Nimbus
cumulus-client-consensus-common = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-polkadot-v0.9.32" }
cumulus-client-network = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-polkadot-v0.9.32" }
cumulus-client-service = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-polkadot-v0.9.32" }
cumulus-primitives-core = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-polkadot-v0.9.32" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-polkadot-v0.9.32" }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-polkadot-v0.9.32" }
cumulus-relay-chain-interface = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-polkadot-v0.9.32" }
nimbus-consensus = { git = "https://github.com/purestake/nimbus", branch = "moonbeam-polkadot-v0.9.32" }
# TODO we should be able to depend only on the primitives crate once we move the inherent data provider there.
nimbus-primitives = { git = "https://github.com/purestake/nimbus", branch = "moonbeam-polkadot-v0.9.32" }

# Polkadot
polkadot-cli = { git = "https://github.com/purestake/polkadot", branch = "moonbeam-polkadot-v0.9.32" }
polkadot-primitives = { git = "https://github.com/purestake/polkadot", branch = "moonbeam-polkadot-v0.9.32" }
polkadot-service = { git = "https://github.com/purestake/polkadot", branch = "moonbeam-polkadot-v0.9.32" }

# Benchmarking
frame-benchmarking = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32" }

[dev-dependencies]
prometheus = { version = "0.13.0", default-features = false }
sc-block-builder = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32" }

# Substrate dev-dependencies
substrate-test-runtime = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32" }
substrate-test-runtime-client = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32" }

[features]
default = [
	"kusama-native",
	"moonbase-native",
	"moonbeam-native",
	"moonriver-native",
	"rococo-native",
	"westend-native",
]

kusama-native = [ "polkadot-cli/kusama-native", "polkadot-service/kusama-native" ]
rococo-native = [ "polkadot-cli/rococo-native", "polkadot-service/rococo-native" ]
westend-native = [ "polkadot-cli/westend-native", "polkadot-service/westend-native" ]

moonbase-native = [ "moonbase-runtime", "westend-native" ]
moonbeam-native = [ "moonbeam-runtime" ]
moonriver-native = [ "moonriver-runtime" ]

test-spec = []

runtime-benchmarks = [
	"moonbase-native",
	"moonbase-runtime/runtime-benchmarks",
	"moonbeam-native",
	"moonbeam-runtime/runtime-benchmarks",
	"moonriver-native",
	"moonriver-runtime/runtime-benchmarks",
	"pallet-ethereum/runtime-benchmarks",
]

try-runtime = [
	"moonbase-runtime",
	"moonbase-runtime/try-runtime",
]

moonbase-runtime-benchmarks = [
	"moonbase-native",
	"moonbase-runtime/moonbase-runtime-benchmarks",
	"moonbase-runtime/runtime-benchmarks",
	"pallet-ethereum/runtime-benchmarks",
]
