[package]
authors = ['PureStake']
build = 'build.rs'
description = 'Substrate Moonbeam Node '
edition = '2018'
homepage = 'https://moonbeam.network'
license = 'GPL-3.0-only'
name = 'moonbase-standalone'
repository = 'https://github.com/PureStake/moonbeam/'
version = '0.1.1'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

# We use a dedicated workspace for the standalone node.
# This is necessary because it builds the runtime with the `standalone` feature, and Cargo only
# supports a single feature set per workspace.
[workspace]
exclude = [
  "../../runtime",
]

[dependencies]
futures = "0.3.4"
log = "0.4.8"
structopt = "0.3"
jsonrpc-core = "15.0.0"
jsonrpc-pubsub = "15.0.0"
serde_json = "1.0"
parity-scale-codec = "1.3.0"

sp-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "master" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "master", features = ["wasmtime"] }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "master", features = ["wasmtime"] }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "master" }

moonbeam-runtime = {path = "../../runtime", default-features = false, features = ["std", "standalone"] }
moonbeam-rpc = { path = "../rpc" }
fc-rpc-core = { git = "https://github.com/purestake/frontier", branch = "v0.6-moonbeam" }
fc-consensus = { git = "https://github.com/purestake/frontier", branch = "v0.6-moonbeam" }
fp-consensus = { git = "https://github.com/purestake/frontier", branch = "v0.6-moonbeam" }

author-inherent = { path = "../../pallets/author-inherent"}

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "master" }
