[package]
name = "pallet-asset-manager"
authors = [ "PureStake" ]
edition = "2021"
version = "0.1.0"

[dependencies]
log = { version = "0.4", default-features = false }
serde = { version = "1.0.124", optional = true }

# Moonbeam
xcm-primitives = { path = "../../primitives/xcm/", default-features = false }

# Substrate
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
parity-scale-codec = { version = "3.0.0", default-features = false, features = [ "derive" ] }
scale-info = { version = "2.0", default-features = false, features = [ "derive" ] }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

# Polkadot
xcm = { workspace = true, default-features = false }

# Benchmarks
frame-benchmarking = { workspace = true, optional = true, default-features = false }

[dev-dependencies]
pallet-balances = { workspace = true }
sp-core = { workspace = true }

[features]
default = [ "std" ]
std = [
	"frame-support/std",
	"frame-system/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"serde",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"xcm-primitives/std",
	"xcm/std",
]

runtime-benchmarks = [ "frame-benchmarking", "xcm-primitives/runtime-benchmarks" ]
try-runtime = [ "frame-support/try-runtime" ]
