[package]
authors = ["PureStake"]
edition = "2018"
name = "pallet-author-filter"
version = '0.6.0'

[dependencies]
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
author-inherent = { path = "../author-inherent", default-features = false }
parachain-staking = { path = "../parachain-staking", default-features = false }
cumulus-parachain-system = { git = "https://github.com/paritytech/cumulus",  default-features = false, branch = "master" }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "frame-support/std",
    "frame-system/std",
    "author-inherent/std",
    "parachain-staking/std",
    "sp-core/std",
    "sp-runtime/std",
    "cumulus-parachain-system/std",
]
