[package]
authors = ["PureStake"]
edition = "2018"
name = "pallet-author-filter"
version = '0.6.0'

[dependencies]
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
author-inherent = { path = "../author-inherent", default-features = false }
parachain-staking = { path = "../parachain-staking", default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/cumulus",  default-features = false, branch = "rococo-v1" }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "frame-support/std",
    "frame-system/std",
    "author-inherent/std",
    "parachain-staking/std",
    "sp-core/std",
    "sp-runtime/std",
    "cumulus-pallet-parachain-system/std",
]
