[package]
name = "author-inherent"
version = "0.1.0"
description = "Inject the block author via an inherent, and persist it via a Consensus digest"
authors = ["PureStake"]
edition = "2018"
license = 'GPL-3.0-only'

[dependencies]
frame-support = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
sp-authorship = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }

[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }

[features]
default = ["std"]
std = [
	"frame-support/std",
	"frame-system/std",
	"parity-scale-codec/std",
	"sp-authorship/std",
	"sp-inherents/std",
	"sp-runtime/std",
	"sp-std/std",
]
