[package]
name = "pallet-author-mapping"
authors = [ "PureStake" ]
description = "Maps AuthorIds to AccountIds Useful for associating consensus authors with in-runtime accounts"
edition = "2021"
version = "2.0.5"

[dependencies]
log = { version = "0.4", default-features = false }
serde = { version = "1.0.124", optional = true }

# Substrate
frame-benchmarking = { git = "https://github.com/purestake/substrate", optional = true, default-features = false , branch = "moonbeam-polkadot-v0.9.29" }
frame-support = { git = "https://github.com/purestake/substrate", default-features = false , branch = "moonbeam-polkadot-v0.9.29" }
frame-system = { git = "https://github.com/purestake/substrate", default-features = false , branch = "moonbeam-polkadot-v0.9.29" }
parity-scale-codec = { version = "3.0.0", default-features = false, features = [ "derive" ] }
scale-info = { version = "2.0", default-features = false, features = [ "derive" ] }
sp-runtime = { git = "https://github.com/purestake/substrate", default-features = false , branch = "moonbeam-polkadot-v0.9.29" }
sp-std = { git = "https://github.com/purestake/substrate", default-features = false , branch = "moonbeam-polkadot-v0.9.29" }

# Nimbus
nimbus-primitives = { git = "https://github.com/purestake/nimbus", branch = "moonbeam-polkadot-v0.9.29", default-features = false }

session-keys-primitives = { path = "../../primitives/session-keys", default-features = false }

[dev-dependencies]
pallet-balances = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.29" }
sp-core = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.29" }
sp-io = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.29" }

[features]
default = [ "std" ]
std = [
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"nimbus-primitives/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"serde",
	"session-keys-primitives/std",
	"sp-runtime/std",
	"sp-std/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"session-keys-primitives/runtime-benchmarks",
]
try-runtime = [ "frame-support/try-runtime" ]
