[package]
name = "pallet-author-mapping"
authors = [ "PureStake" ]
description = "Maps AuthorIds to AccountIds Useful for associating consensus authors with in-runtime accounts"
edition = "2021"
version = "2.0.5"

[dependencies]
log = { version = "0.4", default-features = false }
serde = { version = "1.0.124", optional = true }

# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
parity-scale-codec = { version = "3.0.0", default-features = false, features = [ "derive" ] }
scale-info = { version = "2.0", default-features = false, features = [ "derive" ] }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Nimbus
nimbus-primitives = { workspace = true }
session-keys-primitives = { path = "../../primitives/session-keys", default-features = false }

# Benchmarking
frame-benchmarking = { workspace = true, optional = true, default-features = false }

[dev-dependencies]
pallet-balances = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }

[features]
default = [ "std" ]
std = [
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"nimbus-primitives/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"serde",
	"session-keys-primitives/std",
	"sp-runtime/std",
	"sp-std/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"session-keys-primitives/runtime-benchmarks",
]
try-runtime = [ "frame-support/try-runtime" ]
