[package]
name = "pallet-author-mapping"
authors = { workspace = true }
description = "Maps AuthorIds to AccountIds Useful for associating consensus authors with in-runtime accounts"
edition = "2021"
version = "2.0.5"

[dependencies]
log = { workspace = true }
serde = { workspace = true, optional = true }

# Substrate
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
parity-scale-codec = { workspace = true, features = [ "derive" ] }
scale-info = { workspace = true, features = [ "derive" ] }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Nimbus
nimbus-primitives = { workspace = true }

session-keys-primitives = { workspace = true }

[dev-dependencies]
pallet-balances = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }

[features]
default = [ "std" ]
std = [
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"nimbus-primitives/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"serde",
	"session-keys-primitives/std",
	"sp-runtime/std",
	"sp-std/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"session-keys-primitives/runtime-benchmarks",
]
try-runtime = [ "frame-support/try-runtime" ]
